Minor style and whitespace fix

--- a/src/client/stylesheets/components/_sidebar.scss
+++ b/src/client/stylesheets/components/_sidebar.scss
@@ -424,7 +424,7 @@ $icons: '../icons/';
                 background-image: none;
                 background-color: #333;
                 color: #fff;
-                padding: 5px;
+                padding: 3px;
 
                 &.workingstep:after {
                     content: 'WS';
